# asuqtr_control_node

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  package.xml  setup.py
action/: Control.action
launch/: control_node.launch
params/: actuators_mock_signal.yaml  cost_matrix.yaml  game_pad_parameters.yaml  limits_n_thresholds.yaml  lqr_enabled_on_start.yaml
src/: ABG_matrix.py  asuqtr_control_action_server.py  asuqtr_ros_controller.py  control_node.py  lqr_controller.py  lqr_solver.py
srv/: ToggleLqr.srv  TuneMatrix.srv  UpdateAsRate.srv  UpdateAttenuation.srv  UpdatePosThreshold.srv
